# atlas-orchestration

./: .env.example  .env.spaces  .gitignore  ATLAS_RECAP.md  Dockerfile  Dockerfile.spaces  README.md  README_HF.md  README_SPACE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
atlas/: __init__.py
atlas/a2a/: agent_card.py  discovery.py  protocol.py  server.py
atlas/api/: main.py
atlas/api/routes/: agents.py  audit.py  contradiction_signals.py  tasks.py
atlas/core/: audit.py  config.py  models.py
atlas/mcp/: registry.py
atlas/mcp/servers/: code.py  search.py
atlas/orchestrator/: graph.py  nodes.py  state.py
atlas/rag/: dspy_optimizer.py  eval.py  pipeline.py  store.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: init_db.sql
tests/: conftest.py  test_a2a.py  test_audit.py  test_orchestrator.py  test_rag.py
