[tool.poetry]
name = "atlas-orchestration"
version = "0.1.0"
description = "Universal Multi-Agent Orchestration Platform — A2A v0.3 + LangGraph + MCP"
authors = ["Achraf Jarrou <achraf@atlas.dev>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/achrafjarrou/atlas-orchestration"
keywords = ["multi-agent", "A2A", "LangGraph", "MCP", "orchestration", "EU-AI-Act"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
httpx = "^0.27.0"
python-multipart = "^0.0.12"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
aiosqlite = "^0.20.0"
redis = {extras = ["hiredis"], version = "^5.1.0"}
langgraph = "^0.2.55"
langchain-core = "^0.3.20"
langchain-groq = "^0.2.1"
langchain-openai = "^0.2.10"
langsmith = "^0.1.140"
fastmcp = "^2.0.0"
qdrant-client = "^1.11.0"
sentence-transformers = "^3.2.0"
rank-bm25 = "^0.2.2"
duckduckgo-search = "^6.3.0"
groq = "^0.11.0"
openai = "^1.52.0"
python-dotenv = "^1.0.0"
structlog = "^24.4.0"
tenacity = "^9.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
ruff = "^0.7.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"